# gen-aws-sigkey

./: .gitignore  LICENSE  README.md  config.nix  default.nix  gen-aws-sigkey.cabal  release.nix  stack.yaml
app/: Main.hs
nix/: shell.nix
test/: Spec.hs
